--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -90,8 +90,7 @@
 
  @media screen and (max-width: 768px) {
    .navbar-wrapper {
-    position: fixed;
-    top: 9em;
+    z-index: 9;
     left: 0;
     width: 100%;
     z-index: 0;
@@ -114,11 +113,8 @@
 @media screen and (max-width: 480px){
 
 .navbar-wrapper {
-    position: fixed;
-    top: 5em;
-    left: 0;
+    margin-top: 8em;
     width: 100%;
-    z-index: 0;
     margin-top: 0;
     clip-path: none;
     padding: 0.5em 0;
@@ -147,11 +143,4 @@
 }
 }
 
-@media screen and (max-width: 360px) {
- .navbar-wrapper {
-    position: absolute;
-    top: 0;
-    z-index: 3;
- }
 
-}
