--- a/src/title/Title.css
+++ b/src/title/Title.css
@@ -21,6 +21,8 @@ h1 {
     right: 10%;
     white-space: nowrap;
     font-size: 4em;
+    pointer-events: none;
+    
    }
 }
 
@@ -35,7 +37,6 @@ h1 {
             0 0 6px #e63a00;
 
         line-height: 1.1;
-
         position: fixed;
         top: 0;
         font-size: 2.5em;
